--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,6 +11,10 @@
     <label>
       Reading speed (words per minute)
       <input type="textfield" id="wordspermin">
+    </label><br><br>
+    <label>
+      Hide topbar when talking
+      <input type="checkbox" id="hidetopbar">
     </label>
     <br><br>
 
